minor bug fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,8 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">Financial Literacy is important for everyone. To be your partner in your first step, this app allows you to track your income and expenses and monitor it.</p>
+              <p class="text-muted">Financial literacy is important because it equips us with the knowledge and skills we need to manage money effectively
+              . Make Fintracker your first tool for your journey to financial literacy.</p>
             </div>
             {% if user.is_authenticated %}
             <div class="col-sm-4 offset-md-1 py-4">
@@ -55,7 +56,8 @@
           <a href="#">Back to top</a>
         </p>
         <p class="mb-1">Finance Tracker is &copy; Shashwat, but feel free to download and customize it for yourself!</p>
-        <p class="mb-0">Find me on <a href="https://www.facebook.com/s.poud3l/">Facebook</a> or  <a href="#"> BitBucket </a>.</p>
+        <p class="mb-0">Find me on <a href="https://www.facebook.com/s.poud3l/" target="_blank">Facebook</a> or
+          <a href="https://github.com/Shashwat-pd/finance-tracker" target="_blank"> GitHub</a> .</p>
       </div>
     </footer>
     <script
